Working on new home page

--- a/sellItem.html
+++ b/sellItem.html
@@ -659,7 +659,7 @@
                       <script>
                         var closeCrop=function(){
                           $('#cropModal').modal('hide')
-                          alert(document.getElementById("currentlyEditing").src);
+                          //alert(document.getElementById("currentlyEditing").src);
                           //document.getElementById("currentlyEditing").src=document.getElementById("workingImage").src;
                           
                         }
